fixed overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@
 
 #__next {
     @apply h-full;
+    @apply overflow-x-hidden;
 }
 
 h1 {
